# autorace_gazebo_ogry

./: README.md  ыва
autorace_communication_gazebo_ogry/: CMakeLists.txt  package.xml
autorace_communication_gazebo_ogry/action/: Intersection.action  Obstacles.action
autorace_core_gazebo_ogry/: CMakeLists.txt  package.xml
autorace_core_gazebo_ogry/config/: nav.yaml
autorace_core_gazebo_ogry/include/autorace_core_gazebo_ogry/: construction_visibility.h  crosswalk_visibility.h  enums.h  intersection_visibility.h  parking_visibility.h  tunnel_visibility.h
autorace_core_gazebo_ogry/launch/: autorace_core.launch  build_map.launch.py  navigation.launch.py  start_all.launch.py  start_all_actions.launch.py
autorace_core_gazebo_ogry/map/: map.pgm  map.yaml
autorace_core_gazebo_ogry/src/: construction_server.cpp  crosswalk_server.cpp  drive.cpp  drive_v2.cpp  helper.hpp  image_capture.cpp  intersection_server.cpp  parking_server.cpp  recognizer.cpp  road.hpp  sign_detector.cpp  test_driver.cpp  tunnel_server.cpp
autorace_missions_gazebo_ogry/: package.xml  setup.cfg  setup.py
autorace_missions_gazebo_ogry/autorace_missions_gazebo_ogry/: construction.py  crossing.py  intersection.py  parking.py  tunnel.py
autorace_missions_gazebo_ogry/launch/: start_all_action_servers.launch.py
autorace_vision_gazebo_ogry/: package.xml  setup.cfg  setup.py
autorace_vision_gazebo_ogry/autorace_vision_gazebo_ogry/: driver_borders_detector.py  huita.py  navigator.py  sign_detector.py
