<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autorace_core_gazebo_ogry</name>
  <version>0.0.0</version>
  <description>Your advertisement could be here, but it is not</description>
  <maintainer email="m.peshkov@g.nsu.ru">Mikhail Peshkov</maintainer>
  <maintainer email="v.lekomtsev@g.nsu.ru">Vasiliy Lekomtsev</maintainer>
  <maintainer email="chatgpt@openai.com">ChatGPT</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
